@@ -225,6 +225,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>selectedIndex  - read-write - the index of the selected option</li>
 <li>options        - read-write - an array of the options associated with the control</li>
 <li>options.length - read-write - the number of options associated with the control</li>
+<li>value          - read-write - the value of the selected option</li>
 </ul>
 <h4>events</h4>
 <ul>
